--- a/flexml/Cargo.toml
+++ b/flexml/Cargo.toml
@@ -12,7 +12,7 @@ macro = ["flexml_macro"]
 log = "0.4"
 once_cell = "1"
 
-flexml_macro = { path = "../flexml_macro", optional = true }
+flexml_macro = { version = "~0.1.0", path = "../flexml_macro", optional = true }
 
 [dev-dependencies]
 flexml_macro = { path = "../flexml_macro", optional = false }
