--- a/flexml/Cargo.toml
+++ b/flexml/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "flexml"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2021"
 description = "Quickly and easily define namespaced XML serialization"
 license = "MIT"
@@ -12,7 +12,8 @@ macro = ["flexml_macro"]
 log = "0.4"
 once_cell = "1"
 
-flexml_macro = { version = "~0.1.0", path = "../flexml_macro", optional = true }
+flexml_macro = { version = "~0.2.0", path = "../flexml_macro", optional = true }
+indexmap = "2.7.1"
 
 [dev-dependencies]
 flexml_macro = { path = "../flexml_macro", optional = false }
