--- a/flexml_macro/Cargo.toml
+++ b/flexml_macro/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "flexml_macro"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 description = "Macro feature dependency for flexml"
 license = "MIT"
@@ -9,6 +9,7 @@ license = "MIT"
 syn = { version = "2.0.39", features = ["parsing", "derive"] }
 quote = "1.0.33"
 proc-macro2 = "1"
+heck = "0.5"
 
 [lib]
 proc-macro = true
