--- a/flexml_macro/Cargo.toml
+++ b/flexml_macro/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "flexml_macro"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 description = "Macro feature dependency for flexml"
 license = "MIT"
 
 [dependencies]
-syn = { version = "2.0.39", features = ["parsing", "derive"] }
+syn = { version = "2.0.39", features = ["full", "extra-traits", "parsing", "derive"] }
 quote = "1.0.33"
 proc-macro2 = "1"
 heck = "0.5"
